# tetris

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/: game.c  game.h  gameover.c  gameover.h  graphics.c  graphics.h  main.c  pause.c  pause.h  timing.c  timing.h
src/.deps/: game.Po  gameover.Po  graphics.Po  main.Po  pause.Po  timing.Po
