AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = tetris
tetris_LDADD = @CURSES_LIB@
tetris_SOURCES = \
    src/game.c \
    src/gameover.c \
    src/graphics.c \
    src/main.c \
    src/pause.c \
    src/timing.c

noinst_HEADERS = \
    src/game.h \
    src/gameover.h \
    src/graphics.h \
    src/pause.h \
    src/timing.h
